--- a/dark/my-layout.scss
+++ b/dark/my-layout.scss
@@ -177,55 +177,11 @@ body {
 
   &.theme-summary-line--typography {
     margin: 0;
+    height: 4rem;
   }
 
   .theme-summary-typography {
     width: 120px;
-
-    // Draw typography baselines
-    &.mdc-typography--headline1 {
-      $line-height: 2.375rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 2.375rem;
-      font-weight: 300;
-    }
-    &.mdc-typography--headline2 {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 1.75rem;
-      font-weight: 300;
-    }
-    &.mdc-typography--headline3 {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 1.375rem;
-      font-weight: 300;
-    }
-    // &.mdc-typography--headline4 {
-    //   $line-height: 2.5rem;
-    //   @include mdc-typography-baseline-top($line-height);
-    //   @include mdc-typography-baseline-bottom($line-height);
-    // }
-    // &.mdc-typography--headline5 {
-    //   $line-height: 2rem;
-    //   @include mdc-typography-baseline-top($line-height);
-    //   @include mdc-typography-baseline-bottom($line-height);
-    // }
-    // &.mdc-typography--headline6,
-    &.mdc-typography--subtitle1,
-    &.mdc-typography--subtitle2,
-    &.mdc-typography--body1,
-    &.mdc-typography--body2,
-    &.mdc-typography--caption,
-    &.mdc-typography--button,
-    &.mdc-typography--overline {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-    }
   }
 
   // Application of color
