--- a/light/my-layout.scss
+++ b/light/my-layout.scss
@@ -1,4 +1,4 @@
-// Material Theme Builder layout
+// Layout Styles for index.html to display properly
 
 body {
   display: flex;
@@ -35,11 +35,11 @@ body {
 
   .mdc-drawer__content {
     padding: 24px;
-    color: var(--defaultText);
+    color: $mdc-theme-on-secondary;
   }
 
   h6 {
-    color: var(--secondaryText);
+    color: $mdc-theme-on-secondary;
     margin: 0;
   }
   p {
@@ -90,11 +90,11 @@ body {
   }
 
   .section-header a {
-    color: var(--secondaryText);
+    color: my-colors.$secondary-text;
 
     &:hover,
     &:focus {
-      color: var(--defaultText);
+      color: $mdc-theme-on-secondary;
     }
   }
 }
@@ -177,55 +177,11 @@ body {
 
   &.theme-summary-line--typography {
     margin: 0;
+    height: 4rem;
   }
 
   .theme-summary-typography {
     width: 120px;
-
-    // Draw typography baselines
-    &.mdc-typography--headline1 {
-      $line-height: 2.375rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 2.375rem;
-      font-weight: 300;
-    }
-    &.mdc-typography--headline2 {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 1.75rem;
-      font-weight: 300;
-    }
-    &.mdc-typography--headline3 {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-      font-size: 1.375rem;
-      font-weight: 300;
-    }
-    // &.mdc-typography--headline4 {
-    //   $line-height: 2.5rem;
-    //   @include mdc-typography-baseline-top($line-height);
-    //   @include mdc-typography-baseline-bottom($line-height);
-    // }
-    // &.mdc-typography--headline5 {
-    //   $line-height: 2rem;
-    //   @include mdc-typography-baseline-top($line-height);
-    //   @include mdc-typography-baseline-bottom($line-height);
-    // }
-    // &.mdc-typography--headline6,
-    &.mdc-typography--subtitle1,
-    &.mdc-typography--subtitle2,
-    &.mdc-typography--body1,
-    &.mdc-typography--body2,
-    &.mdc-typography--caption,
-    &.mdc-typography--button,
-    &.mdc-typography--overline {
-      $line-height: 2rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-    }
   }
 
   // Application of color
