styled buttons, app bars, lists, menu, switch

--- a/light/my-colors.scss
+++ b/light/my-colors.scss
@@ -23,6 +23,7 @@ $color-caution: rgb(250, 216, 0); // --colorCaution
 $color-normal: rgb(0, 226, 0); // --colorNormal
 $color-standby: rgb(100, 217, 255); // --colorStandby
 $color-off: rgb(142, 154, 163); // --colorOff
+$on-global-app-header: #4dacff; // Dark Theme --primary
 $table-header-background: $global-app-header;
 $table-row-hover-background: $primary-dark-hover;
 $slider-track-background: $input-background;
