--- a/light/my-components.scss
+++ b/light/my-components.scss
@@ -7,12 +7,12 @@
   @include button.horizontal-padding(1rem);
   @include button.ink-color(
     (
-      hover: my-colors.$primary-dark,
-      disabled: rgba(my-colors.$primary-dark, 0.4),
+      hover: my-theme.$primary-dark,
+      disabled: rgba(my-theme.$primary-dark, 0.4),
     )
   );
   &:hover {
-    @include button.ink-color(my-colors.$primary-dark);
+    @include button.ink-color(my-theme.$primary-dark);
   }
 }
 
@@ -26,7 +26,7 @@
   );
   @include button.container-fill-color(
     (
-      hover: my-colors.$primary-dark,
+      hover: my-theme.$primary-dark,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
@@ -36,14 +36,14 @@
   @include button.ink-color(
     (
       default: $mdc-theme-primary,
-      hover: my-colors.$primary-dark,
+      hover: my-theme.$primary-dark,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
   @include button.outline-color(
     (
       default: $mdc-theme-primary,
-      hover: my-colors.$primary-dark,
+      hover: my-theme.$primary-dark,
       disabled: rgba($mdc-theme-primary, 0.4),
     )
   );
@@ -102,7 +102,7 @@ a.mdc-icon-button:hover {
 .mdc-switch {
   @include rtl.reflexive-box(margin, right, 20px);
   @include switch.toggled-on-track-color($mdc-theme-primary);
-  @include switch.toggled-off-track-color(my-colors.$secondary-text);
+  @include switch.toggled-off-track-color(my-theme.$secondary-text);
 
   // On State
   &.mdc-switch--checked {
@@ -116,7 +116,7 @@ a.mdc-icon-button:hover {
   &:not(.mdc-switch--checked) {
     .mdc-switch__thumb {
       background-color: $mdc-theme-on-primary;
-      border: 1px solid my-colors.$secondary-text;
+      border: 1px solid my-theme.$secondary-text;
     }
   }
 }
@@ -129,8 +129,8 @@ a.mdc-icon-button:hover {
   z-index: 1;
 
   @include top-app-bar.ink-color($mdc-theme-on-primary);
-  @include top-app-bar.icon-ink-color(my-colors.$on-global-app-header);
-  @include top-app-bar.fill-color(my-colors.$global-app-header);
+  @include top-app-bar.icon-ink-color(my-theme.$on-global-app-header);
+  @include top-app-bar.fill-color(my-theme.$global-app-header);
 
   &:not(.mdc-top-app-bar--short) {
     width: 100%;
@@ -182,7 +182,7 @@ a.mdc-icon-button:hover {
 
 .mdc-menu.mdc-menu-surface {
   .mdc-list {
-    background: my-colors.$input-background;
+    background: my-theme.$input-background;
     @include list.item-primary-text-ink-color($mdc-theme-on-secondary);
     @include list.item-graphic-ink-color($mdc-theme-on-primary);
   }
@@ -206,15 +206,14 @@ a.mdc-icon-button:hover {
   @include select.label-floating-color($select-filled-text-colors);
   @include select.container-fill-color(
     (
-      default: my-colors.$input-background,
-      hover: my-colors.$primary-dark-hover,
-      disabled: rgba(my-colors.$input-background, 0.4),
+      default: my-theme.$input-background,
+      disabled: rgba(my-theme.$input-background, 0.4),
     )
   );
   @include select.bottom-line-color(
     (
-      default: my-colors.$global-app-header,
-      hover: my-colors.$global-app-header,
+      default: my-theme.$global-app-header,
+      hover: my-theme.$global-app-header,
       focus: $mdc-theme-primary,
       disabled: rgba($mdc-theme-on-secondary, 0.4),
     )
@@ -242,7 +241,7 @@ a.mdc-icon-button:hover {
     .mdc-list {
       .mdc-list-item.mdc-list-item--selected {
         color: $mdc-theme-on-primary;
-        background-color: my-colors.$primary-light;
+        background-color: my-theme.$primary-light;
       }
       .mdc-list-item {
         color: $mdc-theme-on-secondary;
@@ -266,11 +265,11 @@ a.mdc-icon-button:hover {
   }
 
   &:hover {
-    @include chips.outline(2px, solid, my-colors.$primary-light);
-    @include chips.ink-color(my-colors.$primary-light);
-    @include chips.leading-icon-color(my-colors.$primary-light);
+    @include chips.outline(2px, solid, my-theme.$primary-light);
+    @include chips.ink-color(my-theme.$primary-light);
+    @include chips.leading-icon-color(my-theme.$primary-light);
     .mdc-chip__checkmark-path {
-      stroke: my-colors.$primary-light;
+      stroke: my-theme.$primary-light;
     }
   }
 }
@@ -284,8 +283,8 @@ a.mdc-icon-button:hover {
     @include chips.trailing-icon-color($mdc-theme-on-primary, 1);
 
     &:hover {
-      @include chips.fill-color(my-colors.$primary-light);
-      @include chips.outline(2px, solid, my-colors.$primary-light);
+      @include chips.fill-color(my-theme.$primary-light);
+      @include chips.outline(2px, solid, my-theme.$primary-light);
       @include chips.leading-icon-color($mdc-theme-on-primary);
     }
   }
@@ -319,11 +318,11 @@ a.mdc-icon-button:hover {
 
 // Filled and valid
 .mdc-text-field--filled:not(.mdc-text-field--invalid) {
-  @include textfield.fill-color(my-colors.$input-background);
+  @include textfield.fill-color(my-theme.$input-background);
   @include textfield.ink-color($mdc-theme-on-primary);
   @include textfield.placeholder-color(rgba($mdc-theme-on-primary, 0.6));
   @include textfield.label-color($mdc-theme-on-primary);
-  @include textfield.hover-bottom-line-color(my-colors.$primary-light);
+  @include textfield.hover-bottom-line-color(my-theme.$primary-light);
   @include icon.leading-icon-color($mdc-theme-primary);
   @include icon.trailing-icon-color($mdc-theme-primary);
 
@@ -335,7 +334,7 @@ a.mdc-icon-button:hover {
 
 // Filled and invalid
 .mdc-text-field--filled.mdc-text-field--invalid {
-  @include textfield.fill-color(my-colors.$input-background);
+  @include textfield.fill-color(my-theme.$input-background);
   @include textfield.disabled-fill-color(rgba($mdc-theme-on-secondary, 0.4));
   @include textfield.ink-color($mdc-theme-on-primary);
 }
@@ -366,7 +365,7 @@ a.mdc-icon-button:hover {
   flex-direction: row-reverse;
   padding-right: 0;
   .mdc-text-field-helper-text {
-    color: my-colors.$secondary-text;
+    color: my-theme.$secondary-text;
     text-align: end;
     font-size: 0.875rem;
     letter-spacing: 0.5px;
@@ -378,7 +377,7 @@ a.mdc-icon-button:hover {
   flex-direction: row-reverse;
   padding-right: 0;
   .mdc-text-field-helper-text {
-    color: rgba(my-colors.$secondary-text, 0.4);
+    color: rgba(my-theme.$secondary-text, 0.4);
     text-align: end;
     font-size: 0.875rem;
     letter-spacing: 0.5px;
@@ -391,19 +390,16 @@ a.mdc-icon-button:hover {
 .mdc-data-table {
   @include data-table.sort-icon-color($mdc-theme-on-surface);
   @include data-table.sort-icon-active-color($mdc-theme-on-surface);
-  //  Table Rows fill color
-  @include data-table.fill-color($mdc-theme-background);
-  @include data-table.header-row-fill-color(my-colors.$table-header-background);
+  @include data-table.header-row-fill-color(my-theme.$table-header-background);
+  @include data-table.header-row-text-color($mdc-theme-on-primary);
+  @include data-table.fill-color($mdc-theme-surface);
   @include data-table.row-fill-color($mdc-theme-surface);
-  @include data-table.selected-row-fill-color(
-    lighten($mdc-theme-background, 15%)
-  );
-  @include data-table.divider-color($mdc-theme-background);
+  @include data-table.selected-row-fill-color($mdc-theme-background);
+  // @include data-table.divider-color($mdc-theme-background);
   @include data-table.divider-size(2px);
   @include data-table.row-hover-fill-color(
-    my-colors.$table-row-hover-background
+    my-theme.$table-row-hover-background
   );
-  @include data-table.header-row-text-color($mdc-theme-on-secondary);
   @include data-table.row-text-color($mdc-theme-on-secondary);
 
   // Set typography
@@ -427,6 +423,10 @@ a.mdc-icon-button:hover {
     }
 
     .mdc-data-table__content {
+      .mdc-data-table__row--selected {
+        border: 1px solid $mdc-theme-primary;
+      }
+
       .mdc-data-table__cell {
         // Table data to Body1
         font-size: map-get($map: $mdc-typography-styles-body1, $key: font-size);
@@ -523,9 +523,9 @@ a.mdc-icon-button:hover {
 // Enabled
 .mdc-slider:not(.mdc-slider--disabled) {
   @include slider.track-active-color($mdc-theme-primary);
-  @include slider.track-inactive-color(my-colors.$slider-track-background, 1);
-  @include slider.thumb-color(my-colors.$slider-thumb-background);
-  @include slider.tick-mark-active-color(my-colors.$slider-thumb-border);
+  @include slider.track-inactive-color(my-theme.$slider-track-background, 1);
+  @include slider.thumb-color(my-theme.$slider-thumb-background);
+  @include slider.tick-mark-active-color(my-theme.$slider-thumb-border);
   @include slider.tick-mark-inactive-color(#000);
   @include slider.value-indicator-color($mdc-theme-primary, 0.7);
   @include slider.value-indicator-text-color(#000);
@@ -534,9 +534,9 @@ a.mdc-icon-button:hover {
 // Disabled
 .mdc-slider.mdc-slider--disabled {
   @include slider.track-active-color($mdc-theme-primary);
-  @include slider.track-inactive-color(my-colors.$slider-track-background, 1);
-  @include slider.thumb-color(my-colors.$slider-thumb-background);
-  @include slider.tick-mark-active-color(my-colors.$slider-thumb-border);
+  @include slider.track-inactive-color(my-theme.$slider-track-background, 1);
+  @include slider.thumb-color(my-theme.$slider-thumb-background);
+  @include slider.tick-mark-active-color(my-theme.$slider-thumb-border);
   @include slider.tick-mark-inactive-color(#000);
   @include slider.value-indicator-color($mdc-theme-primary, 0.7);
   @include slider.value-indicator-text-color(#000);
@@ -549,7 +549,7 @@ a.mdc-icon-button:hover {
   background: $mdc-theme-surface;
 
   .mdc-list-item:hover {
-    background-color: my-colors.$primary-dark-hover;
+    background-color: my-theme.$primary-dark-hover;
   }
 
   .mdc-list-item--disabled {
