--- a/light/my-layout.scss
+++ b/light/my-layout.scss
@@ -90,7 +90,7 @@ body {
   }
 
   .section-header a {
-    color: my-colors.$secondary-text;
+    color: my-theme.$secondary-text;
 
     &:hover,
     &:focus {
