--- a/light/my-theme.scss
+++ b/light/my-theme.scss
@@ -23,7 +23,7 @@ $color-caution: rgb(250, 216, 0); // --colorCaution
 $color-normal: rgb(0, 226, 0); // --colorNormal
 $color-standby: rgb(100, 217, 255); // --colorStandby
 $color-off: rgb(142, 154, 163); // --colorOff
-$drawer-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected background
+$list-selected: #1c3f5e; // -- Given by Daniel for List/Drawer selected background
 $on-global-app-header: #4dacff; // Dark Theme --primary
 $table-header-background: $global-app-header;
 $table-row-hover-background: $primary-dark-hover;
