--- a/dark/my-components.scss
+++ b/dark/my-components.scss
@@ -104,6 +104,11 @@ a.mdc-icon-button:hover {
   @include switch.toggled-on-track-color($mdc-theme-primary);
   @include switch.toggled-off-track-color(my-theme.$secondary-text);
 
+  // Remove automatic opacity
+  .mdc-switch__track {
+    opacity: 1;
+  }
+
   // On State
   &.mdc-switch--checked {
     .mdc-switch__thumb {
@@ -117,6 +122,12 @@ a.mdc-icon-button:hover {
     .mdc-switch__thumb {
       background-color: $mdc-theme-on-surface;
       border: 1px solid my-theme.$secondary-text;
+    }
+  }
+
+  &:hover {
+    .mdc-switch__track {
+      background-color: my-theme.$primary-light;
     }
   }
 }
@@ -189,6 +200,17 @@ a.mdc-icon-button:hover {
     background: my-theme.$input-background;
     @include list.item-primary-text-ink-color($mdc-theme-on-primary);
     @include list.item-graphic-ink-color($mdc-theme-on-primary);
+
+    .mdc-list-item {
+      &:hover {
+        background-color: my-theme.$primary-light;
+      }
+
+      &.mdc-list-item--selected {
+        background-color: $mdc-theme-primary;
+        color: $mdc-theme-on-primary;
+      }
+    }
   }
 }
 
